updating tasks report ui

--- a/iaroapp/templates/includes/navigation.html
+++ b/iaroapp/templates/includes/navigation.html
@@ -17,7 +17,7 @@
                 {% if request.user.is_authenticated %}
                     <li class="nav-item d-flex align-items-center">
                         <a class="nav-link align-content-center d-flex align-items-center" href="{% url 'view_notes' %}">
-                            <i class="fas fa-bell" style="opacity: 0.80; margin-top: 1px" ></i>
+                            <i class="fa fa-bell me-sm-1" style="margin-top: 1px" ></i>
                             <div class="custom-badge">
                                 <span id="unread-count" data-toggle="tooltip" title="You have unread messages"></span>
                             </div>
