--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -56,7 +56,7 @@
                                                 <h6 class="mb-0 mx-2 text-sm responsive__mobile-3">
                                                     {{ storage.name }}
                                                 </h6>
-                                                <span class="" data-feather="chevron-right"></span>
+{#                                                <span class="" data-feather="chevron-right"></span>#}
 
                                             </div>
                                         </a>
