fix fow body desktop overflow-x

--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -74,6 +74,10 @@
 </main>
 
 <style>
+    body {
+        overflow-x: hidden !important;
+        overflow-y: auto !important;
+    }
     .modified-date {
         padding: 0 !important;
         padding-right: 1rem !important;
