--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -281,18 +281,29 @@
                     <div class="card-body p-3">
                         <div class="d-flex gap-4 justify-content-center" id="holiday-info">
                             <div class="w-45">
-                                <h6 id="today-date"><b>Loading date...</b></h6>
-                                <p class="text-sm" id="today-holidays">Loading...</p>
+                                <h6 id="today-date">Today: {{ today|date:"F j" }}</h6>
+                                <p class="text-sm" id="today-holidays">
+                                    {% for holiday in today_holidays %}
+                                        <strong>{{ holiday.name }}</strong>: {{ holiday.description }}<br>
+                                    {% empty %}
+                                        No holidays today.
+                                    {% endfor %}
+                                </p>
                             </div>
                             <div class="w-45">
-                                <h6 id="tomorrow-date"><b>Loading date...</b></h6>
-                                <p class="text-sm" id="tomorrow-holidays">Loading...</p>
+                                <h6 id="tomorrow-date">Tomorrow: {{ tomorrow|date:"F j" }}</h6>
+                                <p class="text-sm" id="tomorrow-holidays">
+                                    {% for holiday in tomorrow_holidays %}
+                                        <strong>{{ holiday.name }}</strong>: {{ holiday.description }}<br>
+                                    {% empty %}
+                                        No holidays tomorrow.
+                                    {% endfor %}
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
 
         </div>
 
@@ -404,49 +415,50 @@
             margin-top: 0 !important;
         }
     </style>
-    <script>
-        function formatDate(date) {
-            const options = {day: 'numeric', month: 'long'};
-            return date.toLocaleDateString('en-US', options);
-        }
-
-        async function fetchHolidays() {
-            const apiKey = 'ld8geT4B1imhxWfWBsroIJGwqfBYhrnI';
-            const country = 'DE';
-            const year = new Date().getFullYear();
-            let url = `https://calendarific.com/api/v2/holidays?&api_key=${apiKey}&country=${country}&year=${year}`;
-
-            try {
-                const response = await fetch(url);
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                const data = await response.json();
-                const holidays = data.response.holidays;
-                const today = new Date();
-                const tomorrow = new Date(today.getTime() + 86400000);
-
-                const todayFormatted = formatDate(today);
-                const tomorrowFormatted = formatDate(tomorrow);
-
-                const todayHolidays = holidays.filter(holiday => holiday.date.iso === today.toISOString().split('T')[0]);
-                const tomorrowHolidays = holidays.filter(holiday => holiday.date.iso === tomorrow.toISOString().split('T')[0]);
-
-                document.getElementById('today-date').innerHTML = `<b>${todayFormatted}</b>`;
-                document.getElementById('today-holidays').innerHTML = todayHolidays.map(h => h.name).join(', ') || 'No holidays today.';
-                document.getElementById('tomorrow-date').innerHTML = `<b>${tomorrowFormatted}</b>`;
-                document.getElementById('tomorrow-holidays').innerHTML = tomorrowHolidays.map(h => h.name).join(', ') || 'No holidays tomorrow.';
-            } catch (error) {
-                console.error('Failed to fetch holidays:', error);
-                document.getElementById('today-date').innerHTML = '<b>Error loading date</b>';
-                document.getElementById('tomorrow-date').innerHTML = '<b>Error loading date</b>';
-                document.getElementById('today-holidays').innerHTML = 'Failed to load holidays.';
-                document.getElementById('tomorrow-holidays').innerHTML = 'Failed to load holidays.';
-            }
-        }
-
-        fetchHolidays();
-    </script>
+{#    <script>#}
+{#        function formatDate(date) {#}
+{#            const options = {day: 'numeric', month: 'long'};#}
+{#            return date.toLocaleDateString('en-US', options);#}
+{#        }#}
+{##}
+{#        async function fetchHolidays() {#}
+{#            const apiKey = 'drP9SEnt8e5iPinqjLhBQ12LZ4G53ZPm';#}
+{#            const country = 'DE';#}
+{#            const year = new Date().getFullYear();#}
+{#            let url = `https://calendarific.com/api/v2/holidays?&api_key=${apiKey}&country=${country}&year=${year}`;#}
+{##}
+{#            try {#}
+{#                const response = await fetch(url);#}
+{#                if (!response.ok) {#}
+{#                    throw new Error(`HTTP error! status: ${response.status}`);#}
+{#                }#}
+{#                const data = await response.json();#}
+{#                console.log(data)#}
+{#                const holidays = data.response.holidays;#}
+{#                const today = new Date();#}
+{#                const tomorrow = new Date(today.getTime() + 86400000);#}
+{##}
+{#                const todayFormatted = formatDate(today);#}
+{#                const tomorrowFormatted = formatDate(tomorrow);#}
+{##}
+{#                const todayHolidays = holidays.filter(holiday => holiday.date.iso === today.toISOString().split('T')[0]);#}
+{#                const tomorrowHolidays = holidays.filter(holiday => holiday.date.iso === tomorrow.toISOString().split('T')[0]);#}
+{##}
+{#                document.getElementById('today-date').innerHTML = `<b>${todayFormatted}</b>`;#}
+{#                document.getElementById('today-holidays').innerHTML = todayHolidays.map(h => `${h.name}: ${h.description}`).join('<br>') || 'No holidays today.';#}
+{#                document.getElementById('tomorrow-date').innerHTML = `<b>${tomorrowFormatted}</b>`;#}
+{#                document.getElementById('tomorrow-holidays').innerHTML = tomorrowHolidays.map(h => `${h.name}: ${h.description}`).join('<br>') || 'No holidays tomorrow.';#}
+{#            } catch (error) {#}
+{#                console.error('Failed to fetch holidays:', error);#}
+{#                document.getElementById('today-date').innerHTML = '<b>Error loading date</b>';#}
+{#                document.getElementById('tomorrow-date').innerHTML = '<b>Error loading date</b>';#}
+{#                document.getElementById('today-holidays').innerHTML = 'Failed to load holidays.';#}
+{#                document.getElementById('tomorrow-holidays').innerHTML = 'Failed to load holidays.';#}
+{#            }#}
+{#        }#}
+{##}
+{#        fetchHolidays();#}
+{#    </script>#}
 
     <script>
         // scroll down for mobile devices
