add: weekly order options to seller and extend shopping list for weekly orders

--- a/inventory/templates/inventory_shopping.html
+++ b/inventory/templates/inventory_shopping.html
@@ -33,7 +33,7 @@
                                 <thead>
                                 <tr class="title">
                                     <th colspan="4">
-                                        <h6>{{ seller }}</h6>
+                                        <h6>{{ seller.name }} ({{ seller.order_weekday }})</h6>
                                     </th>
                                 </tr>
                                 </thead>
