--- a/inventory/templates/inventory_shopping.html
+++ b/inventory/templates/inventory_shopping.html
@@ -6,17 +6,28 @@
 {% endblock extra_css %}
 
 {% block widgets %}
-<div class="dropdown">
-    <button class="btn bg-gradient-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        {% if selected_branch %}{{ selected_branch.name }}{% else %}All Branches{% endif %}
-    </button>
-    <ul class="dropdown-menu dropdown-menu-end">
-        <li><a class="dropdown-item" href="?branch=all" id="show-loading">All Branches</a></li>
-        {% for branch in branches %}
-        <li><a class="dropdown-item" href="?branch={{ branch.id }}" id="show-loading">{{ branch.name }}</a></li>
-        {% endfor %}
-    </ul>
-</div>
+    <div class="d-flex">
+        <div class="dropdown me-2">
+            <button class="btn bg-gradient-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                {% if is_weekly %}Weekly{% else %}Daily{% endif %}
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="dropdown-item" href="?branch={{ branch_id }}&weekly=True" id="show-loading">Weekly</a></li>
+                <li><a class="dropdown-item" href="?branch={{ branch_id }}&weekly=False" id="show-loading">Daily</a></li>
+            </ul>
+        </div>
+        <div class="dropdown">
+            <button class="btn bg-gradient-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                {% if selected_branch %}{{ selected_branch.name }}{% else %}All Branches{% endif %}
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="dropdown-item" href="?branch=all&weekly={{ is_weekly }}" id="show-loading">All Branches</a></li>
+                {% for branch in branches %}
+                <li><a class="dropdown-item" href="?branch={{ branch.id }}&weekly={{ is_weekly }}" id="show-loading">{{ branch.name }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
 {% endblock %}
 
 
@@ -33,7 +44,7 @@
                                 <thead>
                                 <tr class="title">
                                     <th colspan="4">
-                                        <h6>{{ seller.name }} ({{ seller.order_weekday }})</h6>
+                                        <h6>{{ seller.name }} <span class="text-sm text-secondary">({{ seller.order_weekday }})</span></h6>
                                     </th>
                                 </tr>
                                 </thead>
