--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -38,7 +38,13 @@
             <div class="card mb-4">
                 <div class="card-body px-0 pt-0 pb-2">
                     <div class="table-responsive p-0">
+                        <div class="table-title d-flex p-3">
+                            <span class="text-sm">Target branch:</span><h6
+                                class="text-sm px-1 font-weight-bold">{{ branch }}</h6>
+                        </div>
+
                         <table class="table align-items-center mb-2 table-collapse">
+
                             <thead>
                             <tr>
                                 <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder align-middle responsive__mobile-1">
