--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -23,8 +23,8 @@
 
                         <thead>
                         <tr class="title">
-                            <th class="border-bottom-0" colspan="4">
-                                <h6>Target branch: {{ branch }}</h6>
+                            <th class="border-bottom-0 d-flex" colspan="4">
+                                <span class="text-sm">Target branch:</span><h6 class="text-sm px-1 font-weight-bold">{{ branch }}</h6>
                             </th>
                         </tr>
                         </thead>
@@ -38,73 +38,45 @@
                         </thead>
 
                         <tbody>
-                        <form id="product_form" method="post">
-                            {% csrf_token %}
-                            {{ formset.management_form }}
-                            {% for storage in storages %}
-                                <tr class="entry">
-                                    <td style="height: 40px; white-space: normal !important;">
-
-                                        <a data-bs-toggle="collapse"
-                                           href="#inventoryList_{{ storage.id }}">
-                                            <div class="d-flex align-items-center">
-                                                <svg class="bi" width="16" height="16">
-                                                    <circle cx="8" cy="8" r="7" fill="{{ storage.color }}"
-                                                            stroke="#cbd3da"></circle>
-                                                </svg>
-
-                                                <h6 class="mb-0 mx-2 text-sm responsive__mobile-3">
-                                                    {{ storage.name }}
-                                                </h6>
-{#                                                <span class="" data-feather="chevron-right"></span>#}
-
+                            <form id="product_form" method="post">
+                                {% csrf_token %}
+                                {{ formset.management_form }}
+                                {% for storage in storages %}
+                                    <tr class="entry">
+                                        <td style="height: 40px; white-space: normal !important;">
+                                            <a data-bs-toggle="collapse" href="#inventoryList_{{ storage.id }}">
+                                                <div class="d-flex align-items-center">
+                                                    <svg class="bi" width="16" height="16">
+                                                        <circle cx="8" cy="8" r="7" fill="{{ storage.color }}" stroke="#cbd3da"></circle>
+                                                    </svg>
+                                                    <h6 class="mb-0 mx-2 text-sm responsive__mobile-3">{{ storage.name }}</h6>
+                                                </div>
+                                            </a>
+                                            <div id="inventoryList_{{ storage.id }}" class="collapse" data-bs-parent="#accordion">
+                                                <div class="card-body p-2">
+                                                    {% for form in formset %}
+                                                        {% for product_storage in product_storages %}
+                                                            {% if product_storage.product == form.instance and product_storage.storage == storage %}
+                                                                <a class="list-group-item align-items-center list-group-item-action d-flex gap-2 py-2" aria-current="true" style="width: 100%; border-bottom: 1px solid rgba(131, 146, 171, 0.2);">
+                                                                    <span style="font-size: 1rem">📦</span>
+                                                                    <input type="number" name="product_{{ form.instance.id }}" value="{{ form.instance.id }}" style="display: none;"/>
+                                                                    <input type="number" name="storage_{{ storage.id }}" value="{{ storage.id }}" style="display: none;"/>
+                                                                    <p class="text-sm mb-0 w-100 wrap text-break">
+                                                                        {{ form.name.value }}<br>
+                                                                        <span class="text-secondary text-xxs d-none date-field">{{ product_storage.last_updated|date:"d/F/y H:i" }}</span>
+                                                                    </p>
+                                                                    <input name="value_{{ form.instance.id }}_{{ storage.id }}" type="text" pattern="[0-9]+([.,][0-9]+)?" inputmode="decimal" class="form-control value-input" id="value" value="" placeholder="{{ form.instance.unit.all | join:", " }}" style="width: 100px; height: 34px; padding: 0.4rem; font-size: 16px; scale: 0.9;">
+                                                                </a>
+                                                            {% endif %}
+                                                        {% endfor %}
+                                                    {% endfor %}
+                                                    <input type="submit" class="btn align-self-center bg-gradient-primary m-2" value="Submit inventory"/>
+                                                </div>
                                             </div>
-                                        </a>
-
-                                        <div id="inventoryList_{{ storage.id }}" class="collapse"
-                                             data-bs-parent="#accordion">
-                                            <div class="card-body p-2">
-                                                {% for form in formset %}
-                                                    {% if storage in form.instance.storages %}
-                                                        <a class="list-group-item align-items-center list-group-item-action d-flex gap-2 py-2"
-                                                           aria-current="true" style="width: 100%">
-                                                          <span style="font-size: 1rem">
-                                                            📦
-                                                          </span>
-                                                            <input type="number"
-                                                                   name="product_{{ form.instance.id }}"
-                                                                   value="{{ form.instance.id }}"
-                                                                   style="display: none;"/>
-                                                            <input type="number"
-                                                                   name="storage_{{ storage.id }}"
-                                                                   value="{{ storage.id }}"
-                                                                   style="display: none;"/>
-                                                            <p class="text-sm mb-0 w-100 wrap text-break">
-                                                                {{ form.name.value }}
-                                                            </p>
-
-                                                            <input name="value_{{ form.instance.id }}_{{ storage.id }}"
-                                                                   type="text"
-                                                                   pattern="[0-9]+([.,][0-9]+)?"
-                                                                   inputmode="decimal"
-                                                                   class="form-control"
-                                                                   id="value" value=""
-                                                                   placeholder="{{ form.instance.unit.all | join:", " }}"
-                                                                   style="width: 100px; height: 34px; padding: 0.4rem; font-size: 16px; scale: 0.9;">
-                                                        </a>
-                                                    {% endif %}
-                                                {% endfor %}
-                                                <input type="submit"
-                                                       class="btn align-self-center bg-gradient-primary m-2"
-                                                       value="Submit inventory"/>
-
-                                            </div>
-                                        </div>
-
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </form>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </form>
                         </tbody>
 
                     </table>
@@ -206,5 +178,27 @@
         }
 
     </style>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var inputs = document.querySelectorAll('.value-input');
+
+            inputs.forEach(function(input) {
+                input.addEventListener('focus', function () {
+                    var dateField = this.closest('a').querySelector('.date-field');
+                    if (dateField) {
+                        dateField.classList.remove('d-none');
+                    }
+                });
+
+                input.addEventListener('blur', function () {
+                    var dateField = this.closest('a').querySelector('.date-field');
+                    if (dateField) {
+                        dateField.classList.add('d-none');
+                    }
+                });
+            });
+        });
+    </script>
 
     {% endblock %}
