--- a/inventory/templates/inventory_packaging.html
+++ b/inventory/templates/inventory_packaging.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="{% static 'css/tables.css' %}" type="text/css">
 {% endblock extra_css %}
 
-
 {% block widgets %}
     <div class="dropdown">
         <button class="btn bg-gradient-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -58,79 +57,78 @@
                                 {% for product in products %}
                                     {% if branch == "All" or product.get_main_storage in branch.get_storages %}
                                         {% if product.needs_packaging and target_branch in product.get_storage_branches %}
-
-                                            <tr class="entry">
-                                                <td>
-                                                    <div class="d-flex justify-content-center responsive__mobile-2" >
-                                                        <div class="form-check">
-                                                            <div class="checkbox-wrapper">
-                                                                <input class="form-check-input flex-shrink-0"
-                                                                       type="checkbox"
-                                                                       id="checkbox{{ forloop.counter }}"
-                                                                       name="done_{{ forloop.counter }}">
+                                            {% for product_storage, data in product.get_oos_value_shipping.items %}
+                                                {% if product_storage == target_branch and data.value_needed > 0 %}
+                                                    <tr class="entry">
+                                                        <td>
+                                                            <div class="d-flex justify-content-center responsive__mobile-2" >
+                                                                <div class="form-check">
+                                                                    <div class="checkbox-wrapper">
+                                                                        <input class="form-check-input flex-shrink-0"
+                                                                               type="checkbox"
+                                                                               id="checkbox{{ forloop.counter }}"
+                                                                               name="done_{{ forloop.counter }}">
+                                                                    </div>
+                                                                </div>
                                                             </div>
-                                                        </div>
-                                                    </div>
-                                                </td>
-                                                <td>
-                                                    <div class="d-flex align-items-center">
-                                                        <label for="checkbox{{ forloop.counter }}" class="sr-only">Select {{ product.name }}</label>
-                                                        <h6 class="mb-0 text-sm responsive__mobile-3">
-                                                            {{ product.name }}
-                                                        </h6>
-                                                    </div>
-                                                    <!-- Product Storages Display Mobile -->
-                                                    <div class="mt-1 mb-1 responsive__show">
-                                                        {% for product_storage in product.product_storages.all %}
-                                                            {% if not product_storage.main_storage and product_storage.has_shortage and product_storage.branch == target_branch %}
-                                                                <span class="badge bg-secondary-subtle border border-secondary-subtle text-secondary">
-                                                                    <div class="d-flex align-items-center">
-                                                                        <svg class="bi me-1" width="16" height="16">
-                                                                            <circle cx="8" cy="8" r="7" fill="{{ product_storage.storage.color }}" stroke="#cbd3da"></circle>
-                                                                        </svg>
-                                                                        {{ product_storage.storage.name }}
-                                                                    </div>
-                                                                </span>
-                                                            {% endif %}
-                                                        {% endfor %}
-                                                    </div>
-                                                </td>
-
-                                                <!-- Product Storages Display Laptop-->
-                                                <td class="responsive__hide">
-                                                    <div class="badge-wrap d-flex align-items-center">
-                                                        {% for product_storage in product.product_storages.all %}
-                                                            {% if not product_storage.main_storage and product_storage.has_shortage and product_storage.branch == target_branch %}
-                                                                <span class="badge bg-secondary-subtle border border-secondary-subtle text-secondary">
-                                                                    <div class="d-flex align-items-center">
-                                                                        <svg class="bi me-1" width="16" height="16">
-                                                                            <circle cx="8" cy="8" r="7" fill="{{ product_storage.storage.color }}" stroke="#cbd3da"></circle>
-                                                                        </svg>
-                                                                        {{ product_storage.storage.name }}
-                                                                    </div>
-                                                                </span>
-                                                            {% endif %}
-                                                        {% endfor %}
-                                                    </div>
-                                                </td>
-
-                                                <td>
-                                                    <div class="d-flex align-items-center units-wrap">
-                                                        <div class="units-column d-flex">
-                                                            <h6 class="mb-0 text-sm value">
-                                                                {% for product_storage, data in product.get_oos_value_shipping.items %}
-                                                                    {% if product_storage == target_branch %}
-                                                                        {{ data.value_needed|floatformat:2 }}
+                                                        </td>
+                                                        <td>
+                                                            <div class="d-flex align-items-center">
+                                                                <label for="checkbox{{ forloop.counter }}" class="sr-only">Select {{ product.name }}</label>
+                                                                <h6 class="mb-0 text-sm responsive__mobile-3">
+                                                                    {{ product.name }}
+                                                                </h6>
+                                                            </div>
+                                                            <!-- Product Storages Display Mobile -->
+                                                            <div class="mt-1 mb-1 responsive__show">
+                                                                {% for ps in product.product_storages.all %}
+                                                                    {% if not ps.main_storage and ps.has_shortage and ps.branch == target_branch %}
+                                                                        <span class="badge bg-secondary-subtle border border-secondary-subtle text-secondary">
+                                                                            <div class="d-flex align-items-center">
+                                                                                <svg class="bi me-1" width="16" height="16">
+                                                                                    <circle cx="8" cy="8" r="7" fill="{{ ps.storage.color }}" stroke="#cbd3da"></circle>
+                                                                                </svg>
+                                                                                {{ ps.storage.name }}
+                                                                            </div>
+                                                                        </span>
                                                                     {% endif %}
                                                                 {% endfor %}
-                                                            </h6>
-                                                            <h6 class="mb-0 me-2 ms-1 text-sm unit">
-                                                                {{ product.unit.all|join:", " }}
-                                                            </h6>
-                                                        </div>
-                                                    </div>
-                                                </td>
-                                            </tr>
+                                                            </div>
+                                                        </td>
+
+                                                        <!-- Product Storages Display Laptop-->
+                                                        <td class="responsive__hide">
+                                                            <div class="badge-wrap d-flex align-items-center">
+                                                                {% for ps in product.product_storages.all %}
+                                                                    {% if not ps.main_storage and ps.has_shortage and ps.branch == target_branch %}
+                                                                        <span class="badge bg-secondary-subtle border border-secondary-subtle text-secondary">
+                                                                            <div class="d-flex align-items-center">
+                                                                                <svg class="bi me-1" width="16" height="16">
+                                                                                    <circle cx="8" cy="8" r="7" fill="{{ ps.storage.color }}" stroke="#cbd3da"></circle>
+                                                                                </svg>
+                                                                                {{ ps.storage.name }}
+                                                                            </div>
+                                                                        </span>
+                                                                    {% endif %}
+                                                                {% endfor %}
+                                                            </div>
+                                                        </td>
+
+                                                        <td>
+                                                            <div class="d-flex align-items-center units-wrap">
+                                                                <div class="units-column d-flex">
+                                                                    <h6 class="mb-0 text-sm value">
+                                                                        {{ data.value_needed|floatformat:2 }}
+                                                                    </h6>
+                                                                    <h6 class="mb-0 me-2 ms-1 text-sm unit">
+                                                                        {{ product.unit.all|join:", " }}
+                                                                    </h6>
+                                                                </div>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                {% endif %}
+                                            {% endfor %}
 
                                         {% endif %}
                                     {% endif %}
@@ -145,7 +143,6 @@
         </div>
     </div>
 {% endfor %}
-
 
 <script src="{% static 'js/tables_appearence.js' %}"></script>
 
