--- a/customers/templates/account/customers_auth.html
+++ b/customers/templates/account/customers_auth.html
@@ -52,8 +52,8 @@
 
                     <div class="remember-forgot mt-0 mb-2">
                         <div class="form-check d-flex align-items-center">
-                            <input class="form-check-input" type="checkbox" value="" id="rememberMe">
-                            <label class="form-check-label" for="rememberMe">Remember me</label>
+                            <input class="form-check-input" type="checkbox" name="{{ form_login.remember.name }}" id="rememberMe" {% if form_login.remember.value %}checked{% endif %}>
+                            <label class="form-check-label" for="rememberMe">{{ form_login.remember.label }}</label>
                         </div>
                         <label class="form-check-label">
                             <a href="{% url 'customer_password_reset' %}"
